  Approach to Construct Multiple Testing Procedures in a Hypothetical Phase III Design." 
  Frontiers in public health, 1 (75).

- Fixed: In some cases the description of the graph objects was not loaded.

- Fixed: A backslash '\' in the graph description could crash the GUI including R.

- Better handling of unintentionally entered NaN or infinity values.


Changes in version 0.8-6 (17-02-2014)
=====================================

- Improved memory settings. Especially in R 2.15.1 and 2.15.2 on 32-bit systems 
  errors like the following could occur when the GUI was used:
  java.lang.OutOfMemoryError: unable to create new native thread

- Fixed: When the value of the alpha field was not a valid number in the GUI,
  an infite loop of warning dialogs popped up.
  
- Fixed: Loading old graph objects from version 0.6.x, i.e. from before August 2011,
  without package 'graph' asks to install this package. If this is refused or
  the installation failed, bad things happened like a complete crash of the current
  R session.

- Function 'graph2latex' gains an argument 'scaleText'. If TRUE (default)
  a scalebox is used in LaTeX instead of the optional parameter 'scale'
  from the tikzpicture environment.

- Improved documentation. Some Rd files are built by a patched version of
  roxygen2 that escapes "\" in arguments and understands "returnItem": 
  install_github("roxygen2", username="kornl")
  (This version includes especially Yihui's pull request: 
   https://github.com/klutometis/roxygen/pull/112 
   and A. Alfons's pull request:
   https://github.com/klutometis/roxygen/pull/30 )

- Using RCallServicesREngineWrapper to eval each expression in the environment 
  gMCP:::gMCPenv instead of the global environment.

- Some errors were catched in Java or R, but still showed up in the console.
  We now use 'try(..., silent=TRUE)' in these cases.

- Adjacency Matrix is renamed to Transition Matrix (since some people 
  use the word Adjacency Matrix for the binary matrix).
